--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     --opasBg: #000000b3;
     --disableGraay: #8a8a8a;
     --dartGraay: #080808;
+    --premium: #ffd700;
 }
 
 a {
@@ -342,6 +343,7 @@ li {
     display: flex;
     padding: 0 2%;
     border-radius: 10px;
+    align-content: space-between
 }
 
 .list__strim-item>button>img {
@@ -364,8 +366,14 @@ li {
 
 .list__strim-item.active {
     background: #15feff21;
-    animation: bg_active 3s infinite;
-    -webkit-animation: bg_active 3s infinite;
+    animation: bg_active 4s infinite;
+    -webkit-animation: bg_active 4s infinite;
+}
+
+.list__strim-item.active.premium {
+    background: #ff15ff21;
+    animation: bg_active_premium 4s infinite;
+    -webkit-animation: bg_active_premium 4s infinite;
 }
 
 @keyframes bg_active {
@@ -379,6 +387,20 @@ li {
 
     100% {
         background: #15feff21;
+    }
+}
+
+@keyframes bg_active_premium {
+    0% {
+        background: #eeff0021;
+    }
+
+    50% {
+        background: #eeff003e;
+    }
+
+    100% {
+        background: #eeff0021;
     }
 }
 
@@ -498,3 +520,71 @@ li {
         white-space: nowrap;
     }
 }
+
+/* premium */
+.premium-badge {
+    display: inline-block;
+    /* background: linear-gradient(135deg, var(--akcent), #00a0a0); */
+    background: #08080880;
+    color: var(--premium);
+    border: 1px solid var(--akcent);
+    letter-spacing: 0.2em;
+    padding: 3px 8px;
+    border-radius: 4px;
+    font-size: 12px;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-left: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    position: absolute;
+    top: -0.3em;
+    right: -0.5em;
+    overflow: hidden;
+}
+
+.premium-badge::after {
+    content: "";
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 200%;
+    height: 200%;
+    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.8) 50%, rgba(255, 255, 255, 0) 100%);
+    transform: rotate(30deg);
+    animation: shine 4s infinite;
+    -webkit-animation: shine 4s infinite;
+}
+
+@keyframes shine {
+    0% {
+        transform: translateX(-100%) rotate(30deg);
+        -webkit-transform: translateX(-100%) rotate(30deg);
+        -moz-transform: translateX(-100%) rotate(30deg);
+        -ms-transform: translateX(-100%) rotate(30deg);
+        -o-transform: translateX(-100%) rotate(30deg);
+    }
+
+    100% {
+        transform: translateX(100%) rotate(30deg);
+        -webkit-transform: translateX(100%) rotate(30deg);
+        -moz-transform: translateX(100%) rotate(30deg);
+        -ms-transform: translateX(100%) rotate(30deg);
+        -o-transform: translateX(100%) rotate(30deg);
+    }
+}
+
+.list__strim-item.premium {
+    border-left: 1px solid var(--premium);
+    border-bottom: 1px solid var(--premium);
+    position: relative;
+    background-color: rgba(255, 215, 0, 0.05);
+}
+
+.transmission-header {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 8px;
+}
+
+/* premium */
