--- a/style.css
+++ b/style.css
@@ -497,6 +497,7 @@ li {
     font-weight: bold;
     transition: all 0.3s ease;
     margin: 1em 0;
+    text-transform: capitalize;
 }
 
 .filter-btn:hover {
