--- a/style.css
+++ b/style.css
@@ -586,10 +586,15 @@ li {
     align-items: center;
     flex-wrap: wrap;
     gap: 8px;
-}
-.transmission-header > span {
-    text-transform: capitalize;
-    width: 100%;
+
+    &>.list__strim-allDay {
+        text-transform: capitalize;
+        width: 100%;
+    }
+
+    &>.premium-badge {
+        width: fit-content;
+    }
 }
 
 /* premium */
