--- a/style.css
+++ b/style.css
@@ -522,6 +522,22 @@ li {
     }
 }
 
+
+.transmission-info {
+  display: flex;
+  flex-direction: column;
+  margin-top: 5px;
+}
+
+.transmission-date {
+  color: #666;
+  font-size: 14px;
+  margin-bottom: 3px;
+}
+
+.time-info {
+  font-size: 14px;
+}
 /* premium */
 .premium-badge {
     display: inline-block;
