--- a/style.css
+++ b/style.css
@@ -496,6 +496,22 @@ li {
         margin-top: 0;
     }
 }
+@media (max-height: 580px) {
+    .menu__donate {
+        display: flex;
+        position: absolute;
+        bottom: 7px;
+        right: 10px;
+    }
+    .menu__donate>a {
+        padding: 5px;
+    }
+    .menu__donate>a>img {
+        width: 3em;
+        height: 3em;
+        margin-top: 0;
+    }
+}
 
 @media (min-width: 900px) {
     #listStrimes {
