--- a/style.css
+++ b/style.css
@@ -511,6 +511,13 @@ li {
         height: 3em;
         margin-top: 0;
     }
+    .menu__btn>#rundomFilms{
+        position: absolute;
+        right: 13em;
+        left: 13em;
+        font-size: 0.5em;
+    }
+    
 }
 
 @media (min-width: 900px) {
